# wom_rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/clients/: group_client.rs  mod.rs  player_client.rs
src/models/: competition.rs  error.rs  global_enums.rs  global_types.rs  group.rs  mod.rs  name.rs  player.rs  record.rs  snapshot.rs
src/responses/: global_enums.rs  mod.rs  player_responses.rs  snapshot_responses.rs
tests/mocks/: player_achievement_progress.json  player_achievements.json  player_details.json
tests/mocks/group/: group_create_response.json  group_detail.json  group_name_changes.json  group_search.json
tests/mocks/player/: player_archives.json  player_assert_type.json  player_competition_participation.json  player_competition_standings.json  player_gains.json  player_group_membership.json  player_name_changes.json  player_records.json  player_search.json  player_snapshots.json  player_snapshots_timeline.json
