[package]
name = "wom_rs"
version = "0.1.0"
edition = "2021"
authors = ["Bailey Townsend"]
description = "A rust api wrapper for the OSRS Wise Old Man API"
keywords = ["OSRS", "WOM", "Wise", "Old", "Man"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = {version = "0.4.33", features = ["serde"]}
reqwest = {version = "0.11.20", features = ["json"]}
serde = { version = "1.0.196", features = ["derive"] }

[dev-dependencies]
httpmock = "0.7.0"
tokio = "1.35.1"
