[package]
name = "wom_rs"
version = "0.1.0"
edition = "2021"
authors = ["Bailey Townsend"]
readme = "README.md"
repository = "https://github.com/fatfingers23/wom_rs"
homepage = "https://github.com/fatfingers23/wom_rs"
documentation = "https://docs.rs/wom_rs"
license = "MIT"
description = "A rust api wrapper for the OSRS Wise Old Man API"
keywords = ["OSRS", "WOM", "Wise", "Old", "Man"]
categories = ["api-bindings", "asynchronous", "web-programming", "web-programming::http-client"]

[lib]
name = "wom_rs"

[dependencies]
anyhow = "1.0.79"
chrono = {version = "0.4.33", features = ["serde"]}
convert_case = "0.6.0"
env_logger = { version = "0.11.1", features = [] }
log = "0.4.20"
reqwest = {version = "0.11.20", features = ["json"]}
serde = { version = "1.0.196", features = ["derive"] }
strum = { version="0.26.1" , features = ["derive"]}
serde_json = "1.0.113"


[dev-dependencies]
httpmock = "0.7.0"
tokio = "1.35.1"
